Complete Navbarcomponents and guest and contact pages

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.30.0",
+    "@clerk/themes": "^2.4.8",
     "@prisma/client": "^6.13.0",
     "next": "15.4.6",
     "react": "19.1.0",
@@ -21,10 +22,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
+    "postcss": "^8.5.6",
     "prisma": "^6.13.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.12",
     "typescript": "^5"
   }
 }
