--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ CLERK_SECRET_KEY=sk_test_WIWrhh....
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=/
 NEXT_PUBLIC_CLERK_SIGN_UP_FALLBACK_REDIRECT_URL=/
+OPENROUTER_API_KEY=sk-or-v1-3f2cdc224b....
+NEXT_PUBLIC_APP_URL=http://localhost:3000
