--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@clerk/themes": "^2.4.8",
     "@prisma/client": "^6.13.0",
     "next": "15.4.6",
+    "openai": "^5.12.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
@@ -28,6 +29,7 @@
     "postcss": "^8.5.6",
     "prisma": "^6.13.0",
     "tailwindcss": "^4.1.12",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   }
 }
