--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@clerk/nextjs": "^6.30.0",
     "@clerk/themes": "^2.4.8",
     "@prisma/client": "^6.13.0",
+    "chart.js": "^4.5.0",
     "next": "15.4.6",
+    "next-themes": "^0.4.6",
     "openai": "^5.12.2",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
