--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/themes": "^2.4.8",
     "@prisma/client": "^6.13.0",
     "chart.js": "^4.5.0",
+    "date-fns": "^4.1.0",
     "next": "15.4.6",
     "next-themes": "^0.4.6",
     "openai": "^5.12.2",
